# RapidDecoder

./: .gitignore  gradle-wrapper.properties
builtin-decoder-common/: sampler.cpp
jpeg-decoder/src/main/jni/: CMakeLists.txt  jpegdecoder.cpp
png-decoder/: build.gradle
png-decoder/src/main/jni/: CMakeLists.txt  pngdecoder.cpp
sample/: build.gradle
test/: build.gradle
test/src/androidTest/java/rapid/decoder/: BasicUnitTest.java  DecodeFromUriTest.java
